2013-03-19  Pedro Vicente  <pvicente@uci.edu>

	* ncbo. nco_dmn_ass_var_trv() Create list of all dimensions associated with input variable list;
  done by marking nco_bool flg_ass_var in unique dimension list

2013-03-19  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.0 release procedure:
 	Changes since nco-4_2_6: fxm
	cd ~/nco;cvs tag -d nco-4_3_0;cvs tag -d nco-4_3_0-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.0 release"
	cvs tag -c nco-4_3_0;cvs tag -c nco-4_3_0-1

	* NCO 4.2.6 release procedure:
 	Changes since nco-4_2_5: --rec_apn, non-atomics, --fix_rec_crd, scope
	cd ~/nco;cvs tag -d nco-4_2_6;cvs tag -d nco-4_2_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.6 release"
	cvs tag -c nco-4_2_6;cvs tag -c nco-4_2_6-1

2013-03-16  Pedro Vicente  <pvicente@uci.edu>

	* ncks -O -v two_dmn_rec_var ~/nco/data/in_grp.nc ~/foo.nc;ncks ~/foo.nc
        exposes TODO nco1091, a possible netCDF/HDF bug---duplicate dimension IDs are generated
        Seems to occur if dimension the same name when defined in a group and its ancestor group
        C program that reproduces it, using only netCDF API calls, in
	http://glace.ess.uci.edu/libs/netcdf/257980

2013-03-13  Pedro Vicente  <pvicente@uci.edu>

	* configure: detect Mac OS MacPorts netCDF library

2013-03-11  Charlie Zender  <zender@uci.edu>

	* ncecat remove lmt_all structure code from GAG branch

	* ncecat warn when automatically generated GPE paths conflict during GAG

	* Verify ncks dumps many NASA HDF5 and HDF-EOS5 files, though no HDF4 or HDF-EOS2 files

	* Clarify NC_ENOTNC and NC_ENOTBUILT errors

2013-03-10  Pedro Vicente  <pvicente@uci.edu>

	* Regression tests for order coordinates by group depth and "out of scope" coordinate

	* nco_cmp_crd_dpt() Compare coordinate structures by group depth

2013-03-08  Pedro Vicente  <pvicente@uci.edu>

	* Add regression tests for creation of variables with ancestor group dimensions (GPE, non-GPE)
